--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
             <div class="column">
                 <select>
                     <option value="Minute" selected disabled hidden>Minute</option>
-                
+                <!-- Select -->
                 </select>
             </div>
             <div class="column">
